--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,13 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "learning_log/wsgi.py",
+    "builds": [{
+      "src": "learnig_log/wsgi.py",
       "use": "@vercel/python",
-      "config": {
-        "maxLambdaSize": "50mb"
+      "config": { "maxLambdaSize": "15mb", "runtime": "python3.11.3" }
+    }],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "learning_log/wsgi.py"
       }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "learning_log/wsgi.py"
-    }
-  ]
+    ]
 }
